<resources>
    <string name="app_name">Perishables Inventory</string>
    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="store">Store</string>
    <string name="action_sign_in"> Sign in</string>
    <string name="action_sign_up"> Sign up</string>
    <string name="action_reset_pwd_continue">Continue</string>
    <string name="sing_out">Sign out</string>
    <string name="download_inventory_file">Download inventory</string>
    <string name="manual_item_search">manual search</string>
    <string name="dont_have_account"> Don\'t have an account yet?</string>
    <string name="have_account"> Already have an account? </string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--Activity titles-->
    <string name="activity_departments">Departments</string>
    <string name="title_activity_inventory_count_summary">Inventory Summary</string>
    <string name="title_activity_inventory_count_details">Inventory details</string>
    <string name="title_activity_delete">delete</string>

</resources>
