<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_form"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="222dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="103dp"
            android:src="@drawable/elranchologo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/Moccasin"
            android:textSize="18dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"/>
        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="11dp"
            android:background="@drawable/edittext_background"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/username"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/Moccasin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edittext_background"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_margin="11dp"
                android:textColor="@color/Moccasin"/>

            <cyd.awesome.material.AwesomeText
                android:id="@+id/pwd_show_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/password"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/Tan"
                android:textSize="25sp"
                app:awesome_font="material_design"
                app:awesome_icon="MD_VISIBILITY_OFF" />
        </RelativeLayout>
        <TextView
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/Moccasin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/Moccasin" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <Button
                android:id="@+id/btn_Sign_in"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="88dp"
                android:background="@drawable/button_signup_background"
                android:text="@string/action_sign_in"
                android:textColor="@color/Moccasin"
                android:textStyle="bold" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>